...
            android:id="@+id/tv_save_route_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/et_save_route_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/name_route_hint"
...
            android:id="@+id/tv_save_route_starting_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starting_location" />

        <EditText
            android:id="@+id/et_save_route_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/location_det_hint"
...
            android:id="@+id/tv_route_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_type" />

        <RadioGroup
            android:id="@+id/radiogroup_route_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_btn_loop"
                android:layout_width="0.50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/loop"
                android:gravity="center"
                android:text="@string/loop" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terrain_type" />


        <RadioGroup
            android:id="@+id/rd_group_terrain_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_btn_flat"
                android:layout_width="0.50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/flatterrain"
                android:gravity="center"
                android:text="@string/flat_button" />
...
            android:id="@+id/tv_surface_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surface_type" />

        <RadioGroup
            android:id="@+id/rd_group_surface_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_btn_even"
                android:layout_width="0.50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/evenroad"
                android:gravity="center"
                android:text="@string/even" />
...
            android:id="@+id/tv_land_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/land_type" />

        <RadioGroup
            android:id="@+id/rd_group_land_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_btn_street"
                android:layout_width="0.50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/street"
                android:gravity="center"
                android:text="@string/street" />
...
            android:id="@+id/tv_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty" />

        <RadioGroup
            android:id="@+id/rd_group_difficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_btn_hard"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/hardicon"
                android:gravity="center"
                android:text="@string/hard" />
...
            android:id="@+id/tv_route_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/et_route_notes"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notesHint"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/btn_save_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
