...
        android:background="@color/colorPrimary"
        android:contentDescription="@string/daily_distance_background"
        app:srcCompat="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_distance_prompt"
        app:layout_constraintBottom_toTopOf="@id/btn_start_walk"/>

    <TextView
        android:id="@+id/tv_daily_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/home_txt_size"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_distance_prompt"
        app:layout_constraintBottom_toTopOf="@id/btn_start_walk"/>

    <Button
        android:id="@+id/btn_stop_walk"
        android:layout_width="@dimen/btn_start_walk_width"
        android:layout_height="@dimen/btn_start_walk_height"
        android:background="@drawable/my_button_bg_2"
        android:text="@string/stop_walk"
        android:textSize="@dimen/start_walk_btn_txt_size"
        app:layout_constraintLeft_toLeftOf="@id/btn_start_walk"
...
        android:textSize="@dimen/recent_walk_info_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_time_elapsed_prompt"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>

    <Button
        android:id="@+id/btn_save_this_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_prompt"
        android:textSize="@dimen/save_prompt_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
